--- a/DMCombatScreen.WebMVC/Views/Character/Details.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Details.cshtml
@@ -7,8 +7,8 @@
 <h2>Character Details</h2>
 
 <div>
-    <h4>CharacterDetail</h4>
-    <hr />
+    
+    <hr class="redline"/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.CharacterID)
