--- a/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
@@ -6,10 +6,6 @@
 
 <h2>Characters</h2>
 
-<p>
-    @Html.ActionLink("Create New Character", "Create")
-</p>
-
 @if (TempData.ContainsKey("SaveResult"))
 {
     <div class="alert alert-success fade in" role="alert">
@@ -23,53 +19,72 @@
 
 @using (Html.BeginForm())
 {
-    <p>
-        Search By Character Name: @Html.TextBox("SearchString")
-        <input type="submit" value="Search" />
-    </p>
-    <p>
-        Filter By Category: @Html.DropDownList("CharType", "All")
-        <input type="submit" value="Filter" />
-    </p>
+    <div class="form-group-sm form-inline row">
+        <div class="col-md-5">
+            <p>
+                Search By Character Name: @Html.TextBox("SearchString", null, htmlAttributes: new { @class = "form-control input-sm" })
+                <input type="submit" value="Search" class="btn btn-danger form-control" />
+            </p>
+        </div>
+        <div class="col-md-4 col-md-offset-3">
+            <p>
+                Filter By Character Type: @Html.DropDownList("CharType", null, "All", new { @class = "form-control input-sm" })
+                <input type="submit" value="Filter" class="btn btn-danger form-control" />
+            </p>
+        </div>
+    </div>
 }
 
-<table class="table">
-    <tr>
-        @*<th>
-            @Html.DisplayNameFor(model => model.CharacterID)
-        </th>*@
-        <th>
-            @Html.ActionLink("Character Name", "Index", new { sortOrder = ViewBag.NameSortParam })
-        </th>
-        <th>
-            @Html.ActionLink("Character Type", "Index", new { sortOrder = ViewBag.TypeSortParam })
-        </th>
-        <th>
-            @Html.ActionLink("Is Player", "Index", new { sortOrder = ViewBag.PlayerSortParam })
-        </th>
-        <th></th>
-    </tr>
+<div class="row">
+    <div class="col-md-2">
+        @Html.ActionLink("Create New Character", "Create", null, new { @class = "btn btn-danger btn-lg" })
+    </div>
+</div>
 
-@foreach (var item in Model) {
-    <tr>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.CharacterID)
-        </td>*@
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CharacterType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsPlayer)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.CharacterID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.CharacterID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.CharacterID })
-        </td>
-    </tr>
-}
+<hr />
 
-</table>
+<div class="panel">
+    <div class="table-responsive">
+        <table class="table table-hover">
+            <tr>
+                @*<th>
+                    @Html.DisplayNameFor(model => model.CharacterID)
+                </th>*@
+                <th>
+                    @Html.ActionLink("Character Name", "Index", new { sortOrder = ViewBag.NameSortParam })
+                </th>
+                <th>
+                    @Html.ActionLink("Character Type", "Index", new { sortOrder = ViewBag.TypeSortParam })
+                </th>
+                <th>
+                    @Html.ActionLink("Is Player", "Index", new { sortOrder = ViewBag.PlayerSortParam })
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    @*<td>
+                        @Html.DisplayFor(modelItem => item.CharacterID)
+                    </td>*@
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CharacterType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IsPlayer)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.CharacterID }, new { @class = "table-links" }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.CharacterID }, new { @class = "table-links" }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.CharacterID }, new { @class = "table-links" })
+                    </td>
+                </tr>
+            }
+
+        </table>
+    </div>
+</div>
