--- a/DMCombatScreen.WebMVC/Content/Site.css
+++ b/DMCombatScreen.WebMVC/Content/Site.css
@@ -1,6 +1,39 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background: #f6f7f8;
+    font-family: 'KoHo', sans-serif;
+    font-size: 1.8em;
+    color: #2A2C2B;
+}
+
+h2 {
+    font-weight: 600;
+    font-size: 3em;
+}
+
+.navbar {
+    background: #f44336;
+}
+
+.navbar-fixed-top {
+    border: none;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #fbfbfb;
+}
+
+    .navbar-inverse .navbar-brand:hover {
+        text-decoration: underline;
+    }
+
+.navbar-inverse .navbar-nav li a {
+    color: #fbfbfb;
+}
+
+.navbar-inverse .navbar-nav li a:hover {
+    text-decoration: underline;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -16,9 +49,75 @@
     white-space: normal;
 }
 
+.jumbotron {
+    font-family: 'Metamorphous', cursive;
+    height: 90vh;
+}
+
+.jumbotron h1 {
+    position: absolute;
+    top: 40%;
+    transform: translate(0%, 50%);
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.btn-danger {
+    background-color: #f44336;
+}
+
+.redline {
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(244, 67, 54, 0.75), rgba(0, 0, 0, 0));
+}
+
+
+.form-group-sm .form-control {
+    font-size: 1.2rem;
+}
+
+.panel {
+    background: #f6f7f8;
+    box-shadow: none;
+}
+
+.table tbody tr th {
+    color: #f44336;
+    border-top: none;
+    border-bottom: 1px solid #f44336;
+    padding: 1em inherit;
+}
+
+.table tbody tr td {
+    padding: .8em;
+}
+
+th a {
+    color: #f44336;
+}
+
+th a:hover {
+    color: #f44336;
+}
+
+td {
+    border-bottom: 1px solid #f44336;
+}
+
+.table tbody tr:last-of-type td {
+    border: none;
+}
+
+.table-links {
+    color: #f44336;
+}
+
+.table-links:hover {
+    color: #f44336;
 }
