--- a/DMCombatScreen.WebMVC/Views/Character/Create.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Create.cshtml
@@ -12,8 +12,8 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CharacterCreate</h4>
-        <hr />
+        
+        <hr class="redline"/>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -50,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CharacterType, htmlAttributes: new { @class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CharacterType, EnumHelper.GetSelectList(typeof(DMCombatScreen.Data.CharacterType)), new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.CharacterType, EnumHelper.GetSelectList(typeof(DMCombatScreen.Data.CharacterType)), htmlAttributes: new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.CharacterType, "", new { @class = "text-danger" })
             </div>
         </div>
