--- a/DMCombatScreen.WebMVC/Views/Character/Delete.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Delete.cshtml
@@ -8,8 +8,8 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CharacterDetail</h4>
-    <hr />
+    
+    <hr class="redline"/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.CharacterID)
