--- a/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
@@ -3,5 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>GM Combat Screen</h1>
+    <div class="image-container">
+        <h1>GM Combat Screen</h1>
+        <img src="~/Content/Assets/dmscreen.png" class="logo"/>
+    </div>
 </div>
