--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - GM Combat Screen</title>
+    <link href="https://fonts.googleapis.com/css?family=KoHo:400,600|Metamorphous&display=swap" rel="stylesheet">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
