--- a/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Index.cshtml
@@ -22,19 +22,23 @@
 
 @using (Html.BeginForm())
 {
-    <p>
-        Search by Character or Combat Name: @Html.TextBox("SearchString")
-        <input type="submit" value="Search" />
-    </p>
+    <div class="form-group form-inline">
+        <p>
+            Search by Character or Combat Name: @Html.TextBox("SearchString", null, htmlAttributes: new { @class = "form-control" })
+            <input type="submit" value="Search" class="btn btn-danger" />
+        </p>
+    </div>
 }
 
 <table class="table">
     <tr>
         <th>
             @Html.ActionLink("Character Name", "Index", new { sortOrder = ViewBag.CharSortParam })
+            <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
         </th>
         <th>
-            @Html.ActionLink("Combat Name", "Index", new { sortOrder = ViewBag.CombatSortParam})
+            @Html.ActionLink("Combat Name", "Index", new { sortOrder = ViewBag.CombatSortParam })
+            <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
         </th>
         <th></th>
     </tr>
