--- a/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
@@ -37,7 +37,7 @@
 
 <div class="row">
     <div class="col-md-2">
-        @Html.ActionLink("Create New Character", "Create", null, new { @class = "btn btn-danger btn-lg" })
+        @Html.ActionLink("Create New Character", "Create", null, new { @class = "btn btn-default btn-lg" })
     </div>
 </div>
 
@@ -47,17 +47,17 @@
     <div class="table-responsive">
         <table class="table table-hover">
             <tr>
-                @*<th>
-                    @Html.DisplayNameFor(model => model.CharacterID)
-                </th>*@
                 <th>
                     @Html.ActionLink("Character Name", "Index", new { sortOrder = ViewBag.NameSortParam })
+                    <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
                 </th>
                 <th>
                     @Html.ActionLink("Character Type", "Index", new { sortOrder = ViewBag.TypeSortParam })
+                    <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
                 </th>
                 <th>
                     @Html.ActionLink("Is Player", "Index", new { sortOrder = ViewBag.PlayerSortParam })
+                    <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
                 </th>
                 <th></th>
             </tr>
@@ -65,9 +65,6 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.CharacterID)
-                    </td>*@
                     <td>
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
