--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -18,17 +18,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("GM Combat Screen", "Index", "Home", new { area = "" }, new { @class = "navbar-brand appname" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Characters", "Index", "Character")</li>
-                        <li>@Html.ActionLink("Combats", "Index", "Combat")</li>
-                        <li>@Html.ActionLink("Encounters", "Index", "Attendance")</li>
-                        <li>@Html.ActionLink("Run Combat", "Index", "RunCombat")</li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Combat <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Combats", "Index", "Combat")</li>
+                                <li>@Html.ActionLink("Encounters", "Index", "Attendance")</li>
+                                <li>@Html.ActionLink("Run Combat", "Index", "RunCombat")</li>
+                            </ul>
+                        </li>
                     }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
