--- a/DMCombatScreen.WebMVC/Views/Character/Delete.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete a Character</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete <span class="pagetitle">@Model.Name</span>?</h3>
 <div>
     
     <hr class="redline"/>
@@ -73,7 +73,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
