--- a/DMCombatScreen.WebMVC/Views/Combat/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Combat/Index.cshtml
@@ -21,37 +21,39 @@
     </div>
 }
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CombatID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<div class="table-responsive">
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CombatID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.CombatID }) |
-                @Html.ActionLink("Add Characters", "CreateMultiple", "Attendance", new { id = item.CombatID }, null) |
-                @Html.ActionLink("Details", "Details", new { id = item.CombatID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.CombatID })
-            </td>
-            <td>
-                @Html.ActionLink("Run Combat", "RollInitiative", "RunCombat", new { id = item.CombatID}, null)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.CombatID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th></th>
+            <th></th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CombatID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.CombatID }) |
+                    @Html.ActionLink("Add Characters", "CreateMultiple", "Attendance", new { id = item.CombatID }, null) |
+                    @Html.ActionLink("Details", "Details", new { id = item.CombatID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.CombatID })
+                </td>
+                <td>
+                    @Html.ActionLink("Run Combat", "RollInitiative", "RunCombat", new { id = item.CombatID }, null)
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
