--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Combats", "Index", "Combat")</li>
                                 <li>@Html.ActionLink("Encounters", "Index", "Attendance")</li>
+                                <li role="separator" class="divider"></li>
                                 <li>@Html.ActionLink("Run Combat", "Index", "RunCombat")</li>
                             </ul>
                         </li>
