--- a/DMCombatScreen.WebMVC/Views/Character/Edit.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Edit.cshtml
@@ -59,7 +59,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.IsPlayer, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <div class="checkbox">
+            <div class="checkbox checkbox-inline">
                 @Html.EditorFor(model => model.IsPlayer)
                 @Html.ValidationMessageFor(model => model.IsPlayer, "", new { @class = "text-danger" })
             </div>
@@ -68,14 +68,14 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-danger" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
 </div>
 
 @section Scripts {
