--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <hr class="blackline"/>
         <footer>
             <p>&copy; @DateTime.Now.Year - Drew Wright</p>
         </footer>
