--- a/DMCombatScreen.WebMVC/Views/Attendance/Create.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Create.cshtml
@@ -12,8 +12,8 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>AttendanceCreate</h4>
-    <hr />
+    
+    <hr class="redline"/>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
@@ -34,14 +34,14 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" class="btn btn-danger" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
 </div>
 
 @section Scripts {
