--- a/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
@@ -8,10 +8,12 @@
 
 @using (Html.BeginForm("CreateMultiple", "Attendance", FormMethod.Get, new { id = Model.CombatID }))
 {
-    <p>
-        Filter By Category: @Html.DropDownList("CharType", "All")
-        <input type="submit" value="Filter" />
-    </p>
+    <div class="form-group form-inline">
+        <p>
+            Filter By Category: @Html.DropDownList("CharType", null, "All", new { @class = "form-control" })
+            <input type="submit" value="Filter" class="btn btn-danger form-control" />
+        </p>
+    </div>
 }
 
 @using (Html.BeginForm("CreateMultiple", "Attendance", FormMethod.Post, new { id = Model.CombatID }))
@@ -20,7 +22,7 @@
 
     <div class="form-horizontal">
 
-        <hr />
+        <hr class="redline" />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.CombatName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -67,15 +69,15 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-10">
+                <input type="submit" value="Create" class="btn btn-danger btn-lg" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
 </div>
 
 @section Scripts {
