--- a/DMCombatScreen.WebMVC/Views/Attendance/Delete.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/Delete.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Delete a Character From an Encounter</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete <span class="pagetitle">@Model.CharacterName</span> from <span class="pagetitle">@Model.CombatName</span>?</h3>
 <div>
-    <h4>AttendanceDelete</h4>
-    <hr />
+    
+    <hr class="redline"/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.CharacterID)
@@ -49,8 +49,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
         </div>
     }
 </div>
