--- a/DMCombatScreen.WebMVC/Views/Combat/Details.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Combat/Details.cshtml
@@ -7,8 +7,8 @@
 <h2>Combat Details</h2>
 
 <div>
-    <h4>CombatDetail</h4>
-    <hr />
+    
+    <hr class="redline"/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.CombatID)
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CombatID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.CombatID }, new { @class = "table-links" }) |
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
 </p>
