--- a/DMCombatScreen.WebMVC/Views/Combat/Edit.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Combat/Edit.cshtml
@@ -12,8 +12,8 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CombatEdit</h4>
-        <hr />
+        
+        <hr class="redline"/>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.CombatID)
 
@@ -27,14 +27,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-danger" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
 </div>
 
 @section Scripts {
