--- a/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
@@ -3,8 +3,12 @@
 }
 
 <div class="jumbotron">
-    <div class="image-container">
-        <h1>GM Combat Screen</h1>
-        <img src="~/Content/Assets/dmscreen.png" class="logo"/>
+    <div class="image-container row">
+        <div class="col-md-auto">
+            <h1>GM Combat Screen</h1>
+        </div>
+        <div class="col-md-auto col-md-offset-6">
+            <img src="~/Content/Assets/dmscreenlogo.png" class="logo" />
+        </div>
     </div>
 </div>
