--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -11,13 +11,14 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <img src="~/Content/Assets/d20-vector-geometric-transparent-black.png" class="nav-image navbar-left navbar-brand"/>
                 @Html.ActionLink("GM Combat Screen", "Index", "Home", new { area = "" }, new { @class = "navbar-brand appname" })
             </div>
             <div class="navbar-collapse collapse">
