--- a/DMCombatScreen.WebMVC/Content/Site.css
+++ b/DMCombatScreen.WebMVC/Content/Site.css
@@ -16,6 +16,19 @@ h2 {
     background: #f44336;
 }
 
+.navbar-brand {
+    padding: 15px 10px;
+}
+
+.nav-image {
+    height: 45px;
+    padding: 5px;
+}
+
+.navbar-right {
+    padding-right: 10px;
+}
+
 .navbar-fixed-top {
     border: none;
 }
@@ -33,7 +46,7 @@ h2 {
 }
 
     .navbar-inverse .navbar-nav li a:hover {
-        text-decoration: underline;
+        
         background: #2a2c2b;
     }
 
@@ -104,7 +117,7 @@ h2 {
     position: absolute;
     top: 40%;
     width: 20%;
-    left: 65%;
+    left: 63%;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -173,6 +186,10 @@ td {
 
 .table tbody tr:last-of-type td {
     border: none;
+}
+
+.hpbar {
+    width: 10%;
 }
 
 .table-links {
