--- a/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
@@ -6,9 +6,7 @@
 
 <h2>Roll Initiative</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<hr class="redline" />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -73,8 +71,13 @@
     </table>
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Submit" class="btn btn-default" />
+        <div class="col-md-10">
+            <input type="submit" value="Submit" class="btn btn-danger btn" />
+            
         </div>
     </div>
 }
+
+<div>
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
+</div>
