--- a/DMCombatScreen.WebMVC/Content/Site.css
+++ b/DMCombatScreen.WebMVC/Content/Site.css
@@ -12,6 +12,52 @@ h2 {
     font-size: 3em;
 }
 
+/* adjusted nav breakpoint start*/
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+
+    .navbar-nav {
+        float: none !important;
+        margin-top: 7.5px;
+    }
+
+        .navbar-nav > li {
+            float: none;
+        }
+
+            .navbar-nav > li > a {
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+
+    .collapse.in {
+        display: block !important;
+    }
+}
+
+/*adjusted nav breakpoint end*/
+
+
 .navbar {
     background: #f44336;
 }
@@ -31,6 +77,10 @@ h2 {
 
 .navbar-fixed-top {
     border: none;
+}
+
+.nav li a{
+    padding: 15px 10px;
 }
 
 .navbar-inverse .navbar-brand {
@@ -190,6 +240,10 @@ td {
 
 .hpbar {
     width: 10%;
+}
+
+.conditions-table {
+    border: none;
 }
 
 .table-links {
