--- a/DMCombatScreen.WebMVC/Views/RunCombat/Attack.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/Attack.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Attack";
 }
 
-<h2>Attack</h2>
+<h2>Attack <span class="pagetitle">@Model.CharacterName</span></h2>
 
 
 @using (Html.BeginForm())
@@ -12,8 +12,8 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RunCombatCharacter</h4>
-        <hr />
+        
+        <hr class="redline"/>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
         @Html.HiddenFor(model => model.CombatID)
@@ -43,14 +43,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-danger" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "RunCombat", new { id = Model.CombatID, SelectedCharacter = Model.CurrentTurn - 1 })
+    @Html.ActionLink("Back to List", "RunCombat", new { id = Model.CombatID, SelectedCharacter = Model.CurrentTurn - 1 }, new { @class = "table-links" })
 </div>
 
 @section Scripts {
