--- a/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
@@ -6,6 +6,17 @@
 
 <h2>Run Combat</h2>
 
+@if (TempData.ContainsKey("SaveResult"))
+{
+    <div class="alert alert-success alert-dismissable fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
+    </div>
+}
+
+
 <div class="table-responsive">
     <table class="table">
         <tr>
@@ -48,12 +59,12 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.CurrentHP)
                 </td>
-                @if (!item.IsPlayer)
+                @if (!item.IsPlayer && item.CurrentHP != null)
                 {
                     <td class="hpbar hidden-sm hidden-xs">
                         <div class="progress">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="@item.CurrentHP" aria-valuemin="0" aria-valuemax="@item.MaxHP" style="width: @((@item.CurrentHP/@item.MaxHP)*100)%;">
-                                <span class="sr-only">@item.CurrentHP</span>
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="@item.CurrentHP" aria-valuemin="0" aria-valuemax="@item.MaxHP" style="min-width: 2em; width: @((@item.CurrentHP/@item.MaxHP)*100)%;">
+                                @item.CurrentHP
                             </div>
                         </div>
                     </td>
