--- a/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <div class="image-container row">
+    <div class="image-container">
         <div class="col-md-auto">
-            <h1>GM Combat Screen</h1>
+            <h1 class="logo-text">GM Combat Screen</h1>
         </div>
         <div class="col-md-auto col-md-offset-6">
             <img src="~/Content/Assets/dmscreenlogo.png" class="logo" />
