--- a/DMCombatScreen.WebMVC/Views/RunCombat/Detail.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/Detail.cshtml
@@ -44,4 +44,4 @@
 
 @Html.ActionLink("Return To Combat List", "Index", null, new { @class = "table-links" }) |
 @Html.ActionLink("Edit Participants", "Index", "Attendance", new { searchString = Model.First().CombatName}, new { @class = "table-links" }) |
-@Html.ActionLink("Run Combat", "RollInitiative", new { id = Model.First().CombatID }, new { @class = "table-links" })
+@Html.ActionLink("Roll Initiative", "RollInitiative", new { id = Model.First().CombatID }, new { @class = "table-links" })
