--- a/DMCombatScreen.WebMVC/Views/Character/Edit.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Edit.cshtml
@@ -51,7 +51,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.CharacterType, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("CharType", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("CharacterTypeValue", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.CharacterType, "", new { @class = "text-danger" })
         </div>
     </div>
