--- a/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Index.cshtml
@@ -18,20 +18,20 @@
 }
 <div class="row">
     <div class="col-md-2">
-        @Html.ActionLink("Create New Character", "Create", null, new { @class = "btn btn-danger btn-lg" })
+        @Html.ActionLink("Create New Character", "Create", null, new { @class = "btn btn-danger btn-lg create-btn" })
     </div>
 </div>
 
 @using (Html.BeginForm())
 {
     <div class="form-group-sm form-inline row">
-        <div class="col-md-5">
+        <div class="col-md-7">
             <p>
                 Search By Character Name: @Html.TextBox("SearchString", null, htmlAttributes: new { @class = "form-control input-sm" })
                 <input type="submit" value="Search" class="btn btn-danger form-control" />
             </p>
         </div>
-        <div class="col-md-5 col-md-offset-2">
+        <div class="col-md-5">
             <p>
                 Filter By Character Type: @Html.DropDownList("CharType", null, "All", new { @class = "form-control input-sm" })
                 <input type="submit" value="Filter" class="btn btn-danger form-control" />
@@ -41,7 +41,8 @@
 }
 
 
-<hr class="blackline"/>
+
+<hr class="blackline" />
 
 <div class="panel">
     <div class="table-responsive">
