--- a/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Run Combat!</h2>
 
 <p>
-    @Html.ActionLink("Create New Combat", "Create", "Combat", new { @class = "btn btn-danger btn-lg" })
+    @Html.ActionLink("Create New Combat", "Create", "Combat", new { @class = "btn btn-danger btn-lg"})
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
@@ -32,6 +32,7 @@
                 @Html.DisplayNameFor(model => model.CombatName)
             </th>
             <th></th>
+            <th></th>
         </tr>
 
         @foreach (var item in Model)
@@ -46,8 +47,10 @@
                 <td>
                     @Html.ActionLink("Roll Initiative", "RollInitiative", new { id = item.CombatID }, new { @class = "table-links" }) |
                     @Html.ActionLink("See Combatants", "Detail", new { id = item.CombatID }, new { @class = "table-links" }) |
-                    @Html.ActionLink("Run Combat", "RunCombat", new { id = item.CombatID }, new { @class = "table-links" }) |
                     @Html.ActionLink("Delete", "Delete", "Combat", new { id = item.CombatID }, new { @class = "table-links" })
+                </td>
+                <td>
+                    @Html.ActionLink("Run Combat", "RunCombat", new { id = item.CombatID }, new { @class = "btn btn-danger" })
                 </td>
             </tr>
         }
