home screen animation added

--- a/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
@@ -4,11 +4,16 @@
 
 <div class="jumbotron">
     <div class="image-container">
-        <div class="col-md-auto">
+        <div class="col-md-auto col-xs-push-12">
             <h1 class="logo-text">GM Combat Screen</h1>
+            <div class="text-fade-in"></div>
         </div>
-        <div class="col-md-auto col-md-offset-6">
-            <img src="~/Content/Assets/dmscreenlogo.png" class="logo" />
+        <div class="col-md-auto col-md-offset-6 col-xs-pull-12">
+            <img src="~/Content/Assets/dmscreen-transparent.png" class="logo" />
+         
+                <img src="~/Content/Assets/d20logored.png" class="dice-image"/>
+            
         </div>
     </div>
 </div>
+
