--- a/DMCombatScreen.WebMVC/Content/Site.css
+++ b/DMCombatScreen.WebMVC/Content/Site.css
@@ -150,6 +150,8 @@ h2 {
     white-space: normal;
 }
 
+
+/*Landing page*/
 .jumbotron {
     font-family: 'Metamorphous', cursive;
     height: 83vh;
@@ -161,18 +163,67 @@ h2 {
 }
 
 .jumbotron h1 {
-    position: absolute;
-    top: 40%;
+    position: relative;
+    top: 180px;
     width: 80%;
     transform: translate(0%, 50%);
 }
 
-.logo {
+.text-fade-in {
     position: absolute;
-    top: 40%;
-    width: 20%;
-    left: 63%;
+    top: 320px;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 250px;
+    background: #f6f7f8;
+    animation: fadeIn 4s linear;
+    animation-fill-mode: forwards;
 }
+
+@-webkit-keyframes fadeIn{
+    0% {width: 100%}
+    50% {width: 50%}
+    100% {width: 0%}
+}
+
+@keyframes fadeIn{
+    0% {
+        width: 100%
+    }
+
+    50% {
+        width: 50%
+    }
+
+    100% {
+        width: 0%
+    }
+}
+
+.logo {
+    position: relative;
+    top: 50px;
+    width: 320px;
+    left: 50%;
+}
+
+.dice-image{
+    position: relative;
+    top: 85px;
+    left: 10%;
+    width: 75px;
+    animation: diceRoll 2.5s linear;
+    animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes diceRoll{
+    from {transform: translate(-1300%) rotate(0deg)}
+    to {transform: translate(0%) rotate(1080deg)}
+}
+
+
+/*End Landing Page*/
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
