home screen animation improved, display data annotations updated

--- a/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
@@ -50,7 +50,7 @@
                     @Html.ActionLink("Delete", "Delete", "Combat", new { id = item.CombatID }, new { @class = "table-links" })
                 </td>
                 <td>
-                    @Html.ActionLink("Run Combat", "RunCombat", new { id = item.CombatID }, new { @class = "btn btn-danger" })
+                    @Html.ActionLink("Run Combat", "RunCombat", new { id = item.CombatID }, new { @class = "btn btn-danger combat-btn" })
                 </td>
             </tr>
         }
