--- a/DMCombatScreen.WebMVC/Content/Site.css
+++ b/DMCombatScreen.WebMVC/Content/Site.css
@@ -167,37 +167,15 @@ h2 {
     top: 180px;
     width: 80%;
     transform: translate(0%, 50%);
-}
-
-.text-fade-in {
-    position: absolute;
-    top: 320px;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 250px;
-    background: #f6f7f8;
-    animation: fadeIn 4s linear;
-    animation-fill-mode: forwards;
-}
-
-@-webkit-keyframes fadeIn{
-    0% {width: 100%}
-    50% {width: 50%}
-    100% {width: 0%}
+    animation: fadeIn 4s forwards;
 }
 
 @keyframes fadeIn{
-    0% {
-        width: 100%
+    from {
+        clip-path: inset(0 100% 0 0)
     }
-
-    50% {
-        width: 50%
-    }
-
-    100% {
-        width: 0%
+    to {
+        clip-path: inset(0 0 0 0)
     }
 }
 
@@ -205,7 +183,7 @@ h2 {
     position: relative;
     top: 50px;
     width: 320px;
-    left: 50%;
+    left: 31%;
 }
 
 .dice-image{
@@ -311,6 +289,10 @@ td {
 
 .player-links {
     text-align: right;
+}
+
+.combat-btn {
+    font-size: .9em;
 }
 
 .table-links:hover {
